Covnverted groovy test to java, Remove groovy dependency from pom